--- a/compucompare/pom.xml
+++ b/compucompare/pom.xml
@@ -58,6 +58,12 @@
             <version>5.2.8.RELEASE</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.13.1</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
