--- a/compucompare/pom.xml
+++ b/compucompare/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.13.1</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 
     </dependencies>
 
