--- a/compucompare/pom.xml
+++ b/compucompare/pom.xml
@@ -109,6 +109,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>compucompare</finalName>
+					<executable>true</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
