Updated example configuration for production environment.

--- a/docs/production_config_example.properties
+++ b/docs/production_config_example.properties
@@ -5,8 +5,12 @@
 # Need To Enter:
 #  * SSL Certificate Settings
 #  * Database Information
+#
+# DO NOT PUSH SENSITIVE INFORMATION ONLINE
+# Keep customized configuration files private!
 # 
 # Note: HTTP Traffic Redirects To HTTPS
+#       under production environments.
 
 # Profile
 spring.profiles.active = production
@@ -25,7 +29,7 @@ server.ssl.keyStoreType = keystoretype
 logging.level.root = INFO
 
 # Database Connection
-spring.datasource.url = jdbc:mariadb://databaseserver:port/database #CHANGE
+spring.datasource.url = jdbc:mariadb://databaseserver:port/database
 spring.datasource.username = dbusername
 spring.datasource.password = dbpassword
 
