--- a/vue-directory/compucompare-frontend/package.json
+++ b/vue-directory/compucompare-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compucompare-frontend",
+  "name": "compucompare",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "survey-vue": "^1.8.13",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
